添加清除终端的快捷键

--- a/tmux.conf
+++ b/tmux.conf
@@ -159,12 +159,15 @@ bind -n 'C-Down' if-shell "$is_vim" 'send-keys C-Down' 'resize-pane -D 1'
 bind -n 'C-Up' if-shell "$is_vim" 'send-keys C-Up' 'resize-pane -U 1'
 bind -n 'C-Right' if-shell "$is_vim" 'send-keys C-Right' 'resize-pane -R 1'
 
+# 清除终端
+bind -n C-n send-keys C-l \;
+
 bind-key -T copy-mode-vi C-Left resize-pane -L 1
 bind-key -T copy-mode-vi C-Down resize-pane -D 1
 bind-key -T copy-mode-vi C-Up resize-pane -U 1
 bind-key -T copy-mode-vi C-Right resize-pane -R 1
 
-set -g allow-passthrough on
+# set -g allow-passthrough on
 
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
