--- a/tmux.conf
+++ b/tmux.conf
@@ -111,7 +111,7 @@ bind-key \{ swap-window -t -1 \; previous-window
 bind-key \} swap-window -t +1 \; next-window
 
 # NOTE: git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
-# NOTE：安装插件 <C-t> + I
+# NOTE:安装插件 <C-t> + I
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 
