--- a/tmux.conf
+++ b/tmux.conf
@@ -63,8 +63,8 @@ bind -n M-q kill-window
 # close other window
 bind -n M-e kill-window -a
 
-bind -n M-Tab previous-window
-bind -n Tab next-window
+bind -n C-M-h previous-window
+bind -n C-M-l next-window
 
 # rebind split window
 unbind %
