--- a/tmux.conf
+++ b/tmux.conf
@@ -97,7 +97,7 @@ bind -T copy-mode-vi K send-keys -N 5 -X cursor-up
 bind -T copy-mode-vi J send-keys -N 5 -X cursor-down
 bind -T copy-mode-vi H send-keys -X start-of-line
 bind -T copy-mode-vi L send-keys -X end-of-line
-# 缺少依赖
+# 缺少依赖 需要安装依赖xclip
 bind -T copy-mode-vi Y send-keys -X copy-end-of-line
 bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 # 下面两个没有效果
