--- a/tmux.conf
+++ b/tmux.conf
@@ -115,7 +115,8 @@ bind-key \} swap-window -t +1 \; next-window
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 
-set -g @plugin 'tmux-plugins/tmux-yank'
+# termux上不需要它，其他不清楚
+# set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 # <C-t> + F
